# planning-platform

./: .gitignore  CLAUDE_CODE_START.md  CONTEXT.md  PHASE_4_SPEC.md  SKILL.md  content_rules.json  discipline_rules.json  national_regulatory_baseline.md  project-schema-407-0977595-v2.json  project-template-blank.json  submission_format_rules.json
app/: README.md
app/tauri/: BUNDLE_NOTES.md  Cargo.toml  installer-hooks.nsh  installer-strings-he.nsh  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/src/: lib.rs  main.rs
compliance_engine/: audit.py  cad_compliance_checker.py  constants.py  content_compliance_checker.py  discipline_findings.py  discipline_policy_checker.py  excel_export.py  extraction_cache.py  feedback_store.py  format_rules_checker.py  render.py  report_generator.py  report_surgery.py  submission_data_extractor.py  submission_extracts.py  text_utils.py  vision_verify.py
docs/: deferred_cleanup_before_phase_2.md  dev_setup.md  known_issues.md  m0_clause_inventory_spec.md  m1_page_manifest_spec.md  m2_unified_extraction_spec.md  m3_critic_spec.md  m4_engine_adapter_spec.md  ness-ziona-policy-themes.md  phase_1_completion.md  phase_2a_completion.md  phase_2b_commitments.md  phase_2b_completion.md  phase_3_vision_scanner_proposal.md  post_m6_backlog.md  product_spec_v0.1.md  style-guide-hebrew.md  הוראות_התקנה_אלן.md
migrations/: 0001_feedback_tables.sql
scripts/: gen_discipline_feedback_templates.py  generate_sample_pdf.py  prep_cowork_session.sh  run_audit.py
src/: __init__.py  load_project.py  render_report_pdf.py  (+1 more)
(+205 files in other folders)
