[package]
name = "planning-platform"
version = "0.1.0"
description = "Municipal Compliance Platform for Ness Ziona"
authors = ["Lior Levin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "planning_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
